--- a/app/src/main/res/layout-hdpi/activity_login.xml
+++ b/app/src/main/res/layout-hdpi/activity_login.xml
@@ -32,6 +32,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="245dp"
+            android:elevation="1dp"
+            android:background="@color/transparent"
+            android:gravity="bottom|center"
+            android:layout_marginBottom="-246dp"
+            android:layout_gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/splashLogo"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:src="@drawable/kharetati_white"
+                android:visibility="visible"
+                />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imgsplash"
@@ -53,7 +70,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-75dp"
+            android:layout_marginTop="-60dp"
             android:layoutDirection="ltr"
             android:orientation="horizontal"
             android:visibility="visible"
@@ -71,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|left"
-                    android:layout_marginBottom="0dp"
+                    android:layout_marginBottom="2dp"
                     android:background="@color/transparent"
                     android:elevation="25dp"
                     android:fontFamily="@font/dubai_font"
@@ -79,7 +96,7 @@
 
                     android:text="حقوق الطبع والنشر © بلدية دبي. جميع الحقوق محفوظة"
                     android:textColor="@color/maroon_light"
-                    android:textSize="9sp"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -95,7 +112,7 @@
 
                     android:text="@string/copyright"
                     android:textColor="@color/maroon_light"
-                    android:textSize="9sp"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
 
 
@@ -110,12 +127,12 @@
                 <ImageView
                     android:id="@+id/logoSplash"
                     android:layout_width="175dp"
-                    android:layout_height="200dp"
+                    android:layout_height="175dp"
                     android:layout_gravity="bottom|left"
-                    android:layout_marginStart="-40dp"
-                    android:layout_marginBottom="-60dp"
+                    android:layout_marginStart="-5dp"
+                    android:layout_marginBottom="-55dp"
 
-                    android:padding="47dp"
+                    android:padding="42dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/dm_logo_512"
 
