--- a/app/src/main/res/drawable/runtime_bg.xml
+++ b/app/src/main/res/drawable/runtime_bg.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#A31533"/>
+    <stroke  android:color="#707070" android:width="1dp"/>
 </shape>
