--- a/app/src/main/res/layout-xxxhdpi/fragment_home.xml
+++ b/app/src/main/res/layout-xxxhdpi/fragment_home.xml
@@ -50,8 +50,9 @@
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/viewPager"
                     android:layout_width="fill_parent"
-                    android:layout_height="205dp"
-                    android:layout_marginVertical="10dp"
+                    android:layout_height="237dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginBottom="15dp"
                     android:layout_marginHorizontal="10dp"
                     android:clipChildren="false"
                     android:visibility="visible"/>
@@ -80,7 +81,7 @@
                         <LinearLayout
                             android:id="@+id/layoutHeader"
                             android:layout_width="match_parent"
-                            android:layout_height="38dp"
+                            android:layout_height="43dp"
                             android:layoutDirection="locale"
                             android:background="@drawable/maroon_overlay_bg">
                             <TextView
@@ -101,14 +102,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@color/white"
-                            android:layout_marginVertical="2dp"
+                            android:layout_marginVertical="5dp"
                             android:orientation="vertical"
                             android:layout_below="@+id/layoutHeader">
                             <com.google.android.material.tabs.TabLayout
                                 style="@style/font_medium_bold_tab"
                                 android:id="@+id/tabRuntimeLayout"
                                 android:layout_width="match_parent"
-                                android:layout_height="26dp"
+                                android:layout_height="31dp"
                                 android:layout_marginStart="12dp"
                                 android:layout_marginEnd="12dp"
                                 app:tabMode="fixed"
@@ -131,7 +132,7 @@
                             <LinearLayout
                                 android:id="@+id/layoutControlHeader"
                                 android:layout_width="match_parent"
-                                android:layout_height="38dp"
+                                android:layout_height="43dp"
                                 android:layout_marginTop="15dp"
                                 android:layout_marginStart="12dp"
                                 android:layout_marginEnd="12dp"
