--- a/app/src/main/res/layout/pager_adapter_grid_menu.xml
+++ b/app/src/main/res/layout/pager_adapter_grid_menu.xml
@@ -7,10 +7,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_marginHorizontal="10dp">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleGridMenu"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
 </layout>
