--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
 
     <!-- dots active colors -->
-    <color name="maroon_light">#a31533</color>
+    <color name="maroon_light">#A31533</color>
     <color name="contact_text_color">#2a2a2a</color>
     <color name="maroon_light_transparent">#bc556b</color>
     <color name="maroon_dark">#940e2a</color>
