--- a/app/src/main/res/layout-hdpi/activity_login.xml
+++ b/app/src/main/res/layout-hdpi/activity_login.xml
@@ -34,17 +34,18 @@
             app:layout_constraintVertical_bias="0.0" />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="245dp"
+            android:layout_height="170dp"
             android:elevation="1dp"
             android:background="@color/transparent"
-            android:gravity="bottom|center"
-            android:layout_marginBottom="-246dp"
+            android:gravity="bottom"
+            android:id="@+id/splashLogoLayout"
+            android:layout_marginBottom="-171dp"
             android:layout_gravity="center_horizontal"
             >
             <ImageView
                 android:id="@+id/splashLogo"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
+                android:layout_width="101dp"
+                android:layout_height="101dp"
                 android:src="@drawable/kharetati_white"
                 android:visibility="visible"
                 />
@@ -70,7 +71,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-60dp"
+            android:layout_marginTop="-50dp"
             android:layoutDirection="ltr"
             android:orientation="horizontal"
             android:visibility="visible"
@@ -88,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|left"
-                    android:layout_marginBottom="2dp"
+                    android:layout_marginBottom="0dp"
                     android:background="@color/transparent"
                     android:elevation="25dp"
                     android:fontFamily="@font/dubai_font"
@@ -96,7 +97,7 @@
 
                     android:text="حقوق الطبع والنشر © بلدية دبي. جميع الحقوق محفوظة"
                     android:textColor="@color/maroon_light"
-                    android:textSize="10sp"
+                    android:textSize="9sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -112,7 +113,7 @@
 
                     android:text="@string/copyright"
                     android:textColor="@color/maroon_light"
-                    android:textSize="10sp"
+                    android:textSize="9sp"
                     android:textStyle="bold" />
 
 
@@ -126,13 +127,13 @@
 
                 <ImageView
                     android:id="@+id/logoSplash"
-                    android:layout_width="175dp"
+                    android:layout_width="170dp"
                     android:layout_height="175dp"
                     android:layout_gravity="bottom|left"
-                    android:layout_marginStart="-5dp"
-                    android:layout_marginBottom="-55dp"
+                    android:layout_marginStart="-35dp"
+                    android:layout_marginBottom="-62dp"
 
-                    android:padding="42dp"
+                    android:padding="48dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/dm_logo_512"
 
