--- a/app/src/main/res/layout-mdpi/activity_login.xml
+++ b/app/src/main/res/layout-mdpi/activity_login.xml
@@ -34,17 +34,18 @@
             app:layout_constraintVertical_bias="0.0" />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="175dp"
+            android:layout_height="155dp"
             android:elevation="1dp"
             android:background="@color/transparent"
             android:gravity="bottom"
-            android:layout_marginBottom="-176dp"
+            android:id="@+id/splashLogoLayout"
+            android:layout_marginBottom="-156dp"
             android:layout_gravity="center_horizontal"
             >
             <ImageView
                 android:id="@+id/splashLogo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="102dp"
+                android:layout_height="102dp"
                 android:src="@drawable/kharetati_white"
                 android:visibility="visible"
                  />
@@ -95,7 +96,7 @@
                     android:layout_marginBottom="1dp"
                     android:background="@color/transparent"
                     android:elevation="25dp"
-                    android:textFontWeight="600"
+                    android:textFontWeight="700"
                     android:fontFamily="@font/dubai_font"
                     android:paddingStart="16dp"
 
@@ -114,7 +115,7 @@
                     android:elevation="20dp"
                     android:fontFamily="@font/dubai_font"
                     android:paddingStart="16dp"
-                    android:textFontWeight="600"
+                    android:textFontWeight="700"
 
                     android:text="@string/copyright"
                     android:textColor="@color/maroon_light"
@@ -136,9 +137,9 @@
                     android:layout_height="175dp"
                     android:layout_gravity="bottom|left"
                     android:layout_marginStart="-44dp"
-                    android:layout_marginBottom="-66dp"
+                    android:layout_marginBottom="-70dp"
 
-                    android:padding="43dp"
+                    android:padding="48dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/dm_logo_512"
 
