--- a/app/src/main/res/layout-xhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xhdpi/activity_login.xml
@@ -32,6 +32,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="210dp"
+            android:elevation="1dp"
+            android:background="@color/transparent"
+            android:gravity="bottom|center"
+            android:id="@+id/splashLogoLayout"
+            android:layout_marginBottom="-211dp"
+            android:layout_gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/splashLogo"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/kharetati_white"
+                android:visibility="visible"
+                />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imgsplash"
@@ -53,7 +71,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-75dp"
+            android:layout_marginTop="-60dp"
             android:layoutDirection="ltr"
             android:orientation="horizontal"
             android:visibility="visible"
@@ -79,7 +97,7 @@
 
                     android:text="حقوق الطبع والنشر © بلدية دبي. جميع الحقوق محفوظة"
                     android:textColor="@color/maroon_light"
-                    android:textSize="14sp"
+                    android:textSize="11sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -95,7 +113,7 @@
 
                     android:text="@string/copyright"
                     android:textColor="@color/maroon_light"
-                    android:textSize="14sp"
+                    android:textSize="11sp"
                     android:textStyle="bold" />
 
 
@@ -109,13 +127,13 @@
 
                 <ImageView
                     android:id="@+id/logoSplash"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="175dp"
+                    android:layout_height="180dp"
                     android:layout_gravity="bottom|left"
-                    android:layout_marginStart="-10dp"
-                    android:layout_marginBottom="-60dp"
+                    android:layout_marginStart="-32dp"
+                    android:layout_marginBottom="-59dp"
 
-                    android:padding="35dp"
+                    android:padding="44dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/dm_logo_512"
 
