--- a/app/src/main/res/layout-xxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_login.xml
@@ -30,6 +30,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="255dp"
+            android:elevation="1dp"
+            android:background="@color/transparent"
+            android:gravity="bottom|center"
+            android:id="@+id/splashLogoLayout"
+            android:layout_marginBottom="-256dp"
+            android:layout_gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/splashLogo"
+                android:layout_width="135dp"
+                android:layout_height="135dp"
+                android:src="@drawable/kharetati_white"
+                android:visibility="visible"
+                />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imgsplash"
@@ -55,7 +73,7 @@
             android:layoutDirection="ltr"
             android:weightSum="2"
             android:visibility="visible"
-            android:layout_marginTop="-75dp">
+            android:layout_marginTop="-60dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -73,7 +91,7 @@
                     android:textStyle="bold"
                     android:id="@+id/copyright_english"
 
-                    android:layout_marginBottom="0dp"
+                    android:layout_marginBottom="1dp"
                     android:fontFamily="@font/dubai_font"
                     android:textColor="@color/maroon_light"
                     android:text="حقوق الطبع والنشر © بلدية دبي. جميع الحقوق محفوظة"
@@ -104,15 +122,15 @@
                 android:layout_gravity="end">
             <ImageView
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="195dp"
                 android:id="@+id/logoSplash"
                 android:scaleType="fitXY"
                 android:visibility="visible"
-                android:layout_marginStart="-35dp"
+                android:layout_marginStart="-45dp"
 
-                android:layout_marginBottom="-60dp"
+                android:layout_marginBottom="-65dp"
                 android:layout_gravity="bottom|left"
-                android:padding="47dp"
+                android:padding="49dp"
 
 
                 android:src="@drawable/dm_logo_512"/></LinearLayout>
