--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -32,8 +32,8 @@
                     android:orientation="horizontal">
                     <ImageView
                         android:layout_width="23dp"
-                        android:layout_height="23dp"
-                        android:paddingStart="3dp"
+                        android:layout_height="25dp"
+                        android:layout_gravity="center_vertical"
                         android:id="@+id/backButton"
                         android:src="@drawable/back"/>
                     <TextView
