--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -38,21 +38,25 @@
             android:background="#fcfcfc"
             android:weightSum="1">
 
-
-            <Button
+            <LinearLayout
+                android:id="@+id/payLayout"
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:textColor="@color/white"
-                android:textAllCaps="false"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:textAlignment="center"
                 android:layout_weight=".33"
-                android:text="@string/pay_now"
-
-                android:fontFamily="@font/dubai_font"
-                android:id="@+id/siteplan_payButton"
-                android:background="@drawable/capsule_bg"/>
+                android:background="@drawable/capsule_bg"
+                android:gravity="center"
+                android:layout_marginVertical="4dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textAllCaps="false"
+                    android:textAlignment="center"
+                    android:text="@string/pay_now"
+                    android:fontFamily="@font/dubai_font"
+                    android:id="@+id/siteplan_payButton"
+                    android:layout_marginTop="3dp"/>
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -151,7 +155,6 @@
                         android:layout_height="wrap_content"
                         android:text="@string/voucher_num_mymaps"
                         android:textColor="#3B393A"
-
                         android:textAlignment="viewStart"
                         style="@style/font_small_bold"
                         android:layout_marginStart="5dp"
