1. Dashboard favourite screen for  resolutions.

--- a/app/src/main/res/layout-xxhdpi/adapter_bookmark.xml
+++ b/app/src/main/res/layout-xxhdpi/adapter_bookmark.xml
@@ -27,8 +27,7 @@
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
             android:paddingBottom="9dp"
-            android:paddingTop="4dp"
-            >
+            android:paddingTop="4dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,14 +41,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/LBL_DATE_TIME"
                     android:visibility="invisible"
-                    android:textSize="11sp"
+                    android:textSize="12sp"
                     android:textAlignment="viewStart"
                     android:fontFamily="@font/dubai_font"
                     android:textColor="#262424"
                     android:layout_marginStart="5dp" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:textSize="11sp"
+                    android:textSize="12sp"
                     android:id="@+id/dateBookmark"
                     android:layout_marginStart="5dp"
                     android:textColor="#262424"
@@ -75,7 +74,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:textColor="@color/favoritesTextColor"
                         android:fontFamily="@font/dubai_font"
                         android:text="@string/plot_no"/>
@@ -85,7 +84,7 @@
                         android:textColor="@color/favoritesTextColor"
                         android:fontFamily="@font/dubai_font"
                         android:id="@+id/plotNo"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:layout_marginHorizontal="5dp"
                         android:layout_marginVertical="5dp"
                         android:text='@{adapterBookmarkVM.getCurrentBookmark(position).ParcelNumber ?? ""}'/>
@@ -114,7 +113,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/area"
-                            android:textSize="13sp"
+                            android:textSize="14sp"
                             android:textAlignment="viewStart"
                             android:textColor="@color/favoritesTextColor"
                             android:fontFamily="@font/dubai_font"
@@ -122,7 +121,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="13sp"
+                            android:textSize="14sp"
                             android:textColor="@color/favoritesTextColor"
                             android:fontFamily="@font/dubai_font"
                             android:singleLine="true"
@@ -135,7 +134,7 @@
                         android:id="@+id/txtDescriptionEn"
                         android:textColor="@color/favoritesTextColor"
                         android:fontFamily="@font/dubai_font"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:text="desc"
                         android:layout_marginStart="15dp"
                         android:layout_width="wrap_content"
@@ -164,8 +163,8 @@
                             android:gravity="center"
                             android:id="@+id/gotomap">
                             <ImageView
-                                android:layout_width="22dp"
-                                android:layout_height="25dp"
+                                android:layout_width="25dp"
+                                android:layout_height="29dp"
                                 android:fontFamily="@font/dubai_font"
                                 android:id="@+id/view"
                                 android:src="@drawable/map_512"/>
@@ -179,8 +178,8 @@
                             android:gravity="center"
                             android:id="@+id/edit">
                             <ImageView
-                                android:layout_width="22dp"
-                                android:layout_height="25dp"
+                                android:layout_width="25dp"
+                                android:layout_height="29dp"
                                 android:fontFamily="@font/dubai_font"
                                 android:src="@drawable/edit_512"/>
                         </LinearLayout>
@@ -192,8 +191,8 @@
                             android:gravity="center"
                             android:layout_marginStart="5dp">
                             <ImageView
-                                android:layout_width="22dp"
-                                android:layout_height="25dp"
+                                android:layout_width="25dp"
+                                android:layout_height="29dp"
                                 android:src="@drawable/delete_512"
                                 android:fontFamily="@font/dubai_font"
                                 />
@@ -206,8 +205,8 @@
                             android:gravity="center"
                             android:layout_marginStart="5dp">
                             <ImageView
-                                android:layout_width="22dp"
-                                android:layout_height="25dp"
+                                android:layout_width="25dp"
+                                android:layout_height="29dp"
                                 android:src="@drawable/makani_512"
                                 android:fontFamily="@font/dubai_font" />
                         </LinearLayout>
