--- a/app/src/main/res/layout-mdpi/fragment_bookmark.xml
+++ b/app/src/main/res/layout-mdpi/fragment_bookmark.xml
@@ -22,17 +22,16 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:orientation="vertical">
-
             <LinearLayout
                 android:id="@+id/fragment_map_layoutSearch"
                 android:layout_width="match_parent"
-                android:layout_height="74dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="55dp"
                 android:orientation="horizontal"
                 android:layout_marginHorizontal="8dp">
-
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="34dp"
+                    android:layout_height="32dp"
                     android:layout_gravity="center"
                     android:weightSum="5"
                     android:background="@drawable/favourites_search_bg">
@@ -53,7 +52,7 @@
                         android:text="@string/findPlot"
                         android:textAlignment="viewStart"
                         android:textColor="#333333"
-                        android:textSize="14sp" />
+                        android:textSize="11sp" />
 
                     <AutoCompleteTextView
                         android:id="@+id/fragment_bookmarks_plotnumber"
@@ -77,7 +76,7 @@
                         android:paddingEnd="5dp"
                         android:textAlignment="viewStart"
                         android:textDirection="ltr"
-                        android:textSize="14sp" />
+                        android:textSize="11sp" />
 
                     <LinearLayout
                         android:id="@+id/fragment_bookmarks_btnSearch"
