--- a/app/src/main/res/layout-xxxhdpi/fragment_map.xml
+++ b/app/src/main/res/layout-xxxhdpi/fragment_map.xml
@@ -34,7 +34,7 @@
         <FrameLayout
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
+            android:layout_height="36dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
@@ -61,10 +61,10 @@
 
                     <ImageView
                         android:id="@+id/imgBack"
-                        android:layout_width="24dp"
+                        android:layout_width="27dp"
                         android:layout_height="match_parent"
 
-                       android:padding="4dp"
+                       android:padding="5dp"
                         android:layout_gravity="start|center_vertical"
                         app:srcCompat="@drawable/ic_arrow" />
 
@@ -86,12 +86,12 @@
                         android:layout_weight="2"
                         android:maxLength="20"
 
-                        android:textSize="9sp" />
+                        android:textSize="14sp" />
                     <ImageView
                         android:id="@+id/imgSearch"
-                        android:layout_width="33dp"
+                        android:layout_width="36dp"
                         android:layout_height="match_parent"
-                        android:padding="8dp"
+                        android:padding="9dp"
                         android:layout_weight="0.7"
                         android:layout_gravity="start|center_vertical"
                         android:src="@drawable/search_512" />
@@ -112,7 +112,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:padding="7.5dp"
+                        android:padding="8dp"
                         android:src="@drawable/map_menu_512"/>
                 </LinearLayout>
 
@@ -211,13 +211,13 @@
             app:layout_constraintTop_toBottomOf="@+id/toolBarLayout" />
         <ListView
             android:id="@+id/listmap_menu"
-            android:layout_width="124dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="52dp"
             android:backgroundTint="@color/white"
             android:divider="#CCCCCC"
-            android:dividerHeight="1dp"
+            android:dividerHeight=".45dp"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="12dp"
             android:layout_gravity="end"
@@ -228,19 +228,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBarLayout" />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
-            app:fabCustomSize="30dp"
+            app:fabCustomSize="33dp"
             android:id="@+id/floatingButtton"
             app:srcCompat="@drawable/menu_512"
             android:scaleType="fitCenter"
             android:padding="8dp"
-            app:maxImageSize="24dp"
+            app:maxImageSize="29dp"
             android:foregroundGravity="center"
             app:backgroundTint="@color/white"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="72dp"
             android:layout_gravity="bottom|end"/>
         <FrameLayout
             android:layout_width="30dp"
